<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodFirebase">

    <EditText
        android:id="@+id/Cod1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="45dp"
        android:hint="@string/roomid"
        android:padding="20dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="230dp"
        android:layout_marginRight="45dp"
        android:hint="@string/password"
        android:padding="20dp"
        android:textSize="18sp"
        android:textAllCaps="true"/>



    <Button
        android:id="@+id/Submitbtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/submit"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        />

</RelativeLayout>