<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout"
    android:background="@drawable/backgroundgamoney">

    <com.google.android.material.navigation.NavigationView
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:itemTextColor="#F5F5DC"
        app:itemIconTint="#F5F5DC"
        android:background="@drawable/sidenav1"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>

            <TextView
                android:id="@+id/gamename"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:fontFamily="@font/bungee"
                android:gravity="center"
                android:text="@string/cod"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_below="@+id/gamename"
                android:id="@+id/Cod_image"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/select_product_image"
                app:tint="#fff"
                android:contentDescription="@string/tournament_image"/>

            <EditText
                android:id="@+id/Cod_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Cod_image"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_price"
                android:inputType="number"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"/>

            <EditText
                android:id="@+id/Cod_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Cod_price"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"/>


            <EditText
                android:id="@+id/Cod_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Cod_description"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_time"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"
                android:inputType="text" />

            <EditText
                android:id="@+id/Cod_prize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Cod_time"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_prize"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"
                android:inputType="number"/>

            <EditText
                android:id="@+id/Cod_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Cod_prize"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_date"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Number"
                android:inputType="number"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/Cod_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Cod_date"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_month"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"
                android:inputType="text" />

            <EditText
                android:id="@+id/Cod_tournament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Cod_month"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_tournament"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"
                android:inputType="text" />

            <EditText
                android:id="@+id/Cod_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Cod_tournament"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_map"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"
                android:inputType="text" />

            <Button
                android:id="@+id/add_Event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Cod_map"
                android:layout_marginTop="20dp"
                android:text="@string/add_event"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:padding="17dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:background="#000"/>

        </RelativeLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>