<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout"
    android:background="@drawable/backgroundgamoney">

    <com.google.android.material.navigation.NavigationView
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:itemTextColor="#F5F5DC"
        app:itemIconTint="#F5F5DC"
        android:background="@drawable/sidenav1"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar" />

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gamename"
                android:text="@string/pubg"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="#fff"
                android:textStyle="bold"
                android:fontFamily="@font/bungee"/>


                <ImageView
                    android:id="@+id/select_Event_image111"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gamename"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/select_product_image"
                    app:tint="#fff"
                    android:contentDescription="@string/tournament_image" />

                <EditText
                    android:id="@+id/Event_Price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/select_Event_image111"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_price"
                    android:inputType="textMultiLine"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/edittextbg"
                    android:textColor="#fff"
                    android:autofillHints="Text" />

                <EditText
                    android:id="@+id/Event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Event_Price"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginTop="6dp"
                    android:hint="@string/enter_description"
                    android:inputType="textMultiLine"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/edittextbg"
                    android:textColor="#fff"
                    android:autofillHints="Text"/>


                <EditText
                    android:id="@+id/Event_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Event_description"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginTop="6dp"
                    android:hint="@string/enter_time"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/edittextbg"
                    android:textColor="#fff"
                    android:autofillHints="Number"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/Event_Prize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Event_time"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_prize"
                    android:inputType="textMultiLine"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/edittextbg"
                    android:textColor="#fff"
                    android:autofillHints="Number"/>

                <EditText
                    android:id="@+id/Event_Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Event_Prize"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_date"
                    android:inputType="textMultiLine"
                    android:padding="20dp"
                    android:textSize="18sp"
                    tools:ignore="TextFields"
                    android:textColorHint="#fff"
                    android:background="@drawable/edittextbg"
                    android:textColor="#fff"
                    android:autofillHints="Number"/>

                <EditText
                    android:id="@+id/Event_Month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Event_Date"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_month"
                    android:inputType="textMultiLine"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/edittextbg"
                    android:textColor="#fff"
                    android:autofillHints="Text"/>

                <EditText
                    android:id="@+id/Event_Tournament"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Event_Month"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_tournament"
                    android:inputType="textMultiLine"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/edittextbg"
                    android:textColor="#fff"
                    android:autofillHints="Text"/>

                <EditText
                    android:id="@+id/Event_Map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Event_Tournament"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/enter_map"
                    android:inputType="textMultiLine"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/edittextbg"
                    android:textColor="#fff"
                    android:autofillHints="Text"/>


                <Button
                    android:id="@+id/add_Event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Event_Map"
                    android:layout_marginTop="20dp"
                    android:text="@string/add_event"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:padding="17dp"
                    android:textSize="18sp"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:background="#000"/>

             </RelativeLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>