<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pubgfirebase">


    <EditText
        android:id="@+id/Roomid1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="45dp"
        android:hint="@string/roomid"
        android:padding="20dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="230dp"
        android:layout_marginRight="45dp"
        android:hint="@string/password"
        android:padding="20dp"
        android:textSize="18sp" />

    <EditText
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password4"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:hint="Tournamentid"
        android:textSize="18sp"
        android:id="@+id/tournamentid1"
        android:padding="20sp"/>

    <EditText
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tournamentid1"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:hint="Price"
        android:textSize="18sp"
        android:id="@+id/pricejoined"
        android:padding="20sp"/>



    <Button
        android:id="@+id/Submitbtn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pricejoined"
        android:layout_marginTop="25dp"
        android:text="@string/submit"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="#ffffff"
       />


</RelativeLayout>