<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@drawable/backgroundgamoney"
    tools:context=".RoomID">

    <com.google.android.material.navigation.NavigationView
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:itemTextColor="#F5F5DC"
        app:itemIconTint="#F5F5DC"
        android:background="@drawable/sidenav1"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <EditText
                android:id="@+id/tournamentid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="100dp"
                android:hint="@string/tournament_name"
                android:inputType="text"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"/>

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tournamentid"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/price"
                android:inputType="number"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"/>

            <EditText
                android:id="@+id/roomID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/room_id"
                android:inputType="text"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"/>

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/roomID"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="text"
                android:padding="20dp"
                android:textSize="18sp"
                android:textColorHint="#fff"
                android:background="@drawable/edittextbg"
                android:textColor="#fff"
                android:autofillHints="Text"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Password"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:padding="17dp"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:background="#000"/>

        </RelativeLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>